<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <FrameLayout
            android:id="@+id/f_add_product_image_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/middle_margin"
            android:foreground="?attr/selectableItemBackground">

            <ImageView
                android:id="@+id/f_add_product_image"
                android:layout_width="@dimen/picture_size"
                android:layout_height="@dimen/picture_size"
                android:layout_gravity="bottom"
                android:src="@drawable/product_placeholder" />

            <TextView
                android:id="@+id/f_add_product_image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_photo"
                android:textColor="#fff"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_margin"
            android:layout_marginRight="@dimen/middle_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/f_add_product_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_product_title_hint"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/primary_text" />
        </android.support.design.widget.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_margin"
            android:layout_marginRight="@dimen/middle_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/f_add_product_producer_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_product_producer_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/primary_text" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:id="@+id/f_add_product_producer_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="@dimen/base_margin"
                android:visibility="invisible" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_margin"
            android:layout_marginRight="@dimen/middle_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/base_margin"
                android:text="@string/add_product_type_hint"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/f_add_product_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/middle_margin"
            android:layout_marginRight="@dimen/middle_margin"
            android:layout_marginTop="@dimen/base_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/base_margin"
                android:text="@string/add_product_category_hint"
                android:textColor="@color/secondary_text"
                android:textSize="16sp" />

            <Button
                android:id="@+id/f_add_product_category_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_product_choose_category_hint" />
        </LinearLayout>

        <android.support.v4.widget.Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/f_add_product_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_margin"
            android:layout_marginLeft="@dimen/base_margin"
            android:layout_marginRight="@dimen/base_margin"
            android:layout_marginTop="@dimen/middle_margin"
            android:background="@drawable/orange_button"
            android:text="@string/add_product_add_button"
            android:textColor="@color/light_text" />
    </LinearLayout>
</ScrollView>